Changed query parameters for blocklists endpoints
